prepare to deploy

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-server": "react-scripts build && scp -r ./build/* thirteenth_13@51.250.74.183:~/react-mesto-api-full/frontend",
     "test": "react-scripts test"
   },
   "eslintConfig": {
