--- a/backend/package.json
+++ b/backend/package.json
@@ -24,14 +24,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "celebrate": "^15.0.1",
-    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
-    "pino": "^8.7.0",
-    "pino-http": "^8.2.1",
     "validator": "^13.7.0",
     "winston": "^3.8.2"
   },
@@ -40,7 +38,6 @@
     "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.20",
-    "pino-pretty": "^9.1.1"
+    "nodemon": "^2.0.20"
   }
 }
